# bittuly

./: .gitignore  Cargo.toml  README.md  TARGET.md  docker-compose.yml
docker/postgres-auth/init/: 01-init.sql
docker/postgres-urls/init/: 01-init.sql
docker/postgres/init/: 01-init-schema.sql  02-add-click-count.sql  03-add-search-indexes.sql
libs/shared/: Cargo.toml
libs/shared/src/: config.rs  health.rs  lib.rs  state.rs
scripts/: api-test.sh
services/auth-service/: Cargo.toml
services/auth-service/src/: debug_handler.rs  email.rs  handlers.rs  main.rs  otp_store.rs  repository.rs  routes.rs  service.rs
services/url-service/: Cargo.toml
services/url-service/src/: handlers.rs  main.rs  repository.rs  routes.rs  services.rs
src/: main.rs
src/app/: state.rs
src/config/: settings.rs
src/db/: postgres.rs  redis.rs
src/handlers/: debug_handler.rs  health_handler.rs  mod.rs  url_handler.rs  user_handler.rs
src/middlewares/: jwt.rs
src/models/: mod.rs
src/models/url/: entity.rs  error.rs  mod.rs
src/models/user/: entity.rs  mod.rs
src/repository/: url_repository.rs  user_repository.rs
src/routes/: mod.rs  router.rs  url_routes.rs  user_routes.rs
src/services/: mod.rs  url_service.rs  user_service.rs
src/utils/: email.rs  mod.rs  otp_store.rs
tests/: url_service.rs
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/api/: auth.ts  client.ts  health.ts  urls.ts
web/src/components/: AppLayout.tsx  AppSidebar.tsx  TopBar.tsx  UrlItem.tsx
web/src/context/: AuthContext.tsx
web/src/pages/: Dashboard.tsx  Health.tsx  Insights.tsx  Login.tsx  Profile.tsx  Settings.tsx  Signup.tsx  VerifyOtp.tsx
web/src/router/: AppRouter.tsx  ProtectedRoute.tsx
