[package]
name = "bittuly"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
base62 = "2.2.4"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "10.4.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.11", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.2", features = ["serde", "v4"] }
