[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = "0.15.7"
uuid = { version = "1.23.2", features = ["serde", "v4"] }
axum = "0.8.9"
sqlx = { version = "0.9.0", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
redis = { version = "1.2.2", features = ["tokio-comp", "connection-manager"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
