[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../../libs/shared" }
axum = "0.8.9"
uuid = { version = "1.23.2", features = ["serde", "v4"] }
rand = "0.9"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
validator = { version = "0.20", features = ["derive"] }
serde_json = "1"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
sqlx = { version = "0.9.0", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
bcrypt = "0.15"
